@@ -3,6 +3,7 @@ drumkv1 - an old-school drum-kit sampler
 
 GIT HEAD
 
+- Sample waveform drawing is a bit more keen to precision.
 - Old deprecated Qt4 build support is no more.
 - Normalized wavetable oscillator phasors. (EXPERIMENTAL)
 - Added missing include <unistd.h> to shut up some stricter
